add_subdirectory(fireworks)
add_subdirectory(image)
add_subdirectory(keyboard)
add_subdirectory(lights)
add_subdirectory(mouse)
add_subdirectory(quadtree)
add_subdirectory(quickstart)
add_subdirectory(renderpasses)
add_subdirectory(spritesheets)
add_subdirectory(text)
add_subdirectory(2dwater)
add_subdirectory(movement)
add_subdirectory(astar)
add_subdirectory(tint)
